--- a/001x/index.html
+++ b/001x/index.html
@@ -5,7 +5,7 @@
     <title>杨镇瑄</title>
 </head>
 <body>
-    <img src="1951252_0.jpg"/>
+    <img src="/001x/1951252_0.jpg"/>
 <h1>杨镇瑄</h1>
 <p>杨镇瑄与外教老师合影</P>
 </body>
